<resources>
    <string name="app_name">My Application</string>
    <string name="task_name">Task Name</string>
    <string name="task_desc">Task Description</string>
    <string name="new_task">New Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="select_timer">Select Timer</string>
</resources>